# datathon-playground

./: baseline_walkthrough.ipynb  datathon_ordinal_crispdm.ipynb  main.py  pyproject.toml  submission_baseline.csv
outputs/: advanced_generator_fingerprint_audit.json  baseline_walkthrough_preview.html  disc_A.json  disc_B.json  disc_B_refine.json  disc_C.json  disc_C_refine.json  disc_D.json  disc_E.json  disc_E2.json  disc_E3.json  disc_F.json  disc_G.json  disc_H.json  exp_blend.json  exp_blend_ord_v3.json  exp_daily_lag.json  exp_expand.json  exp_feature_variant.json  exp_final.json  exp_interaction_hunt.json  exp_kelas_encoding.json  exp_lean_tuned.json  exp_newsignal_confirm.json  exp_ordinal.json  exp_ordinal_ensemble.json  exp_ranker_diversity.json  exp_residual_v6.json  exp_signal_screen.json  exp_sweep.json  exp_synthetic_augmentation_smoke.json  exp_v10_exam_order_completion.json  exp_v6_consolidate.json  exp_v8_boundary_refinement.json  exp_v9_residual_correction.json  exp_xgboost_rs45.json  experiment_backlog.json  explore_score_estimators.json  final_rerun_comparison_report.json  leakage_hidden_pattern_audit.json  (+35 more)
reports/: advanced_generator_fingerprint_audit.md  competition_brief.md  crisp_dm_accuracy_improvement_plan.md  eda_feature_recon.md  feature_shift_audit.md  leakage_hidden_pattern_audit.md  submission_diff_audit.md  symbolic_hidden_rule_search.md  v7_residual_signal_audit.md
scripts/: advanced_generator_fingerprint_audit.py  analyze_feature_shift.py  analyze_submission_diff.py  audit_leakage_and_hidden_patterns.py  cache_v6_oof.py  cv_harness.py  (+53 more)
(+14 files in other folders)
